[package]
name = "colink-protocol-remote-shell"
version = "0.1.0"
edition = "2021"
default-run = "colink-protocol-remote-shell"

[dependencies]
colink = "0.1.18"
ctrlc = "3.2"
prost = "0.10"
regex = "1.6"
serde_json = "1.0"
structopt = "0.3"
tokio = "1.18"
tracing = "0.1"
url = "2.2"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
prost-build = "0.10"
