[package]
name = "colink-protocol-s3h"
version = "0.1.6"
edition = "2021"
default-run = "colink-protocol-s3h"

[dependencies]
colink = "0.3.3"
ctrlc = "3.2"
rand = { version = "0.8", features = ["std_rng"] }
regex = "1.6"
serde_json = "1.0"
structopt = "0.3"
tokio = "1.24"
tracing = "0.1"
url = "2.2"
uuid = { version = "0.8", features = ["v4"] }

[[bin]]
name = "s3h"
path = "src/client/s3h.rs"

[[bin]]
name = "s3h_is"
path = "src/client/s3h_is.rs"
